Documents/CS - UTEC/Compiladores/Semana 9/lunes/3/y.output
Grammar

    0 $accept: command $end

    1 command: S

    2 S: C

    3 C: a


Terminals, with rules where they appear

$end (0) 0
error (256)
a (258) 3


Nonterminals, with rules where they appear

$accept (4)
    on left: 0
command (5)
    on left: 1, on right: 0
S (6)
    on left: 2, on right: 1
C (7)
    on left: 3, on right: 2


state 0

    0 $accept: . command $end

    a  shift, and go to state 1

    command  go to state 2
    S        go to state 3
    C        go to state 4


state 1

    3 C: a .

    $default  reduce using rule 3 (C)


state 2

    0 $accept: command . $end

    $end  shift, and go to state 5


state 3

    1 command: S .

    $default  reduce using rule 1 (command)


state 4

    2 S: C .

    $default  reduce using rule 2 (S)


state 5

    0 $accept: command $end .

    $default  accept
